add some comments

--- a/priors_2.0.ipynb
+++ b/priors_2.0.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Utils"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "**Some auxiliary functions for training and input/output.**"
    ]
   },
   {
@@ -20,6 +31,7 @@
      72,
      84
     ],
+    "hidden": true,
     "init_cell": true,
     "run_control": {
      "marked": false
@@ -140,6 +152,15 @@
    },
    "source": [
     "# Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "**These functions compute the performance across time, the psychometric functions (prob. choosing right VS evidence right; prob. repeating VS evidence repeating) and plot the relevant parameters step-by-step for specific periods of the training.**"
    ]
   },
   {
@@ -578,9 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Network"
    ]
@@ -589,7 +608,6 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "hidden": true,
     "init_cell": true,
     "run_control": {
      "marked": false
@@ -756,7 +774,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Task"
    ]
@@ -766,6 +786,7 @@
    "execution_count": 37,
    "metadata": {
     "code_folding": [],
+    "hidden": true,
     "init_cell": true,
     "run_control": {
      "marked": false
@@ -1400,7 +1421,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Call the function."
    ]
@@ -1410,6 +1433,7 @@
    "execution_count": 40,
    "metadata": {
     "code_folding": [],
+    "hidden": true,
     "init_cell": true,
     "run_control": {
      "marked": false
@@ -1495,7 +1519,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Example"
    ]
@@ -1504,6 +1530,7 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
+    "hidden": true,
     "hide_output": false,
     "run_control": {
      "marked": true
@@ -1543,7 +1570,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "main_priors(load_model=False, train=True, gamma=gamma, up_net=up_net,\n",
